This should fix the bug where your remember window state preference mysteriously disappears...usually after a rebuild.
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/trunk@4213 d66e5487-c4fa-4dda-8c8e-ca23240363c0